Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumObjIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(Number var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
