Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjNumObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Integer
        Number var
        var:SetValue(5.0)
        return var
    end
end